--- a/Dnd.Exaltado.Web/Views/Shared/_Header.cshtml
+++ b/Dnd.Exaltado.Web/Views/Shared/_Header.cshtml
@@ -4,6 +4,10 @@
         <li class="nav-item">
             <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
         </li>
+
+        <li class="nav-item d-none d-sm-inline-block">
+            <a href="@Url.Action("Index", "Home")" class="nav-link">Home</a>
+        </li>
     </ul>
 
 </nav>
