--- a/Dnd.Exaltado.Web/Views/Shared/_Sidebar.cshtml
+++ b/Dnd.Exaltado.Web/Views/Shared/_Sidebar.cshtml
@@ -1,8 +1,8 @@
-﻿<!-- Main Sidebar Container -->
+﻿
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
 
     <a class="brand-link">
-        <span class="brand-text font-weight-light" style="color:white; padding-left: 90px;">Menu</span>
+        <span class="brand-text font-weight-light" style="visibility:hidden">Menu</span>
     </a>
 
 
@@ -11,7 +11,7 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
-                <li class="nav-item has-treeview menu-open">
+                <li class="nav-item has-treeview">
                     <a href="#" class="nav-link active">
                         <i class="nav-icon fas fa-dice-d20"></i>
                         <p>
@@ -35,7 +35,7 @@
                     </ul>
                 </li>
 
-                <li class="nav-item has-treeview menu-open">
+                <li class="nav-item has-treeview">
                     <a href="#" class="nav-link active">
                         <i class="nav-icon fas fa-dice-d20"></i>
                         <p>
@@ -45,16 +45,14 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="@Url.Action("Battle", "Encounters")" class="nav-link active">
+                            <a href="@Url.Action("Combat", "Encounters")" class="nav-link active">
                                 <i class="fas fa-dice-d6 nav-icon"></i>
-                                <p>Battle</p>
+                                <p>Combat</p>
                             </a>
                         </li>
                     </ul>
                 </li>
             </ul>
         </nav>
-        <!-- /.sidebar-menu -->
     </div>
-    <!-- /.sidebar -->
 </aside>
