--- a/Dnd.Exaltado.Web/wwwroot/css/site.css
+++ b/Dnd.Exaltado.Web/wwwroot/css/site.css
@@ -1,61 +1,1 @@
-﻿/* Estilo iOS */
-.switch__container {
-    width: 60px;
-    margin-right: 9999px;
-    margin-bottom: 15px;
-}
-
-.switch {
-    visibility: hidden;
-    position: absolute;
-    margin-left: -9999px;
-}
-
-    .switch + label {
-        display: block;
-        position: relative;
-        cursor: pointer;
-        outline: none;
-        user-select: none;
-    }
-
-.switch--shadow + label {
-    padding: 1px;
-    width: 60px;
-    height: 30px;
-    background-color: #dddddd;
-    border-radius: 30px;
-}
-
-    .switch--shadow + label:before,
-    .switch--shadow + label:after {
-        display: block;
-        position: absolute;
-        top: 1px;
-        left: 1px;
-        bottom: 1px;
-        content: "";
-    }
-
-    .switch--shadow + label:before {
-        right: 1px;
-        background-color: #f1f1f1;
-        border-radius: 30px;
-        transition: background 0.4s;
-    }
-
-    .switch--shadow + label:after {
-        width: 31px;
-        background-color: #fff;
-        border-radius: 100%;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-        transition: all 0.4s;
-    }
-
-.switch--shadow:checked + label:before {
-    background-color: #8ce196;
-}
-
-.switch--shadow:checked + label:after {
-    transform: translateX(30px);
-}
+﻿
