--- a/Dnd.Exaltado.Web/Views/Players/_PlayersPartial.cshtml
+++ b/Dnd.Exaltado.Web/Views/Players/_PlayersPartial.cshtml
@@ -61,7 +61,7 @@
                                             </i>
                                             Edit
                                         </a>
-                                        <a class="btn btn-danger btn-sm" href="#">
+                                        <a class="btn btn-danger btn-sm" id="btn-delete-player" value="@Id">
                                             <i class="fas fa-trash">
                                             </i>
                                             Delete
