--- a/Dnd.Exaltado.Web/Views/Players/_PlayersPartial.cshtml
+++ b/Dnd.Exaltado.Web/Views/Players/_PlayersPartial.cshtml
@@ -7,6 +7,7 @@
 
 <div id="PlayersInsertDiv"></div>
 <div id="PlayersViewDiv"></div>
+<div id="PlayersEditDiv"></div>
 
 <div class="card card-outline card-dark">
     <div class="card-header">
@@ -56,7 +57,7 @@
                                             </i>
                                             View
                                         </a>
-                                        <a class="btn btn-info btn-sm" href="#">
+                                        <a class="btn btn-info btn-sm" id="btn-edit-player" value="@Id">
                                             <i class="fas fa-pencil-alt">
                                             </i>
                                             Edit
